--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="dist/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -33,7 +33,7 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
-                <img src="assets/img/Fotoperfil2.jpg" alt="Profile Picture" class="rounded-circle img-fluid" style="width: 210px; height: 250px;">
+                <img src="dist/assets/img/Fotoperfil2.jpg" alt="Profile Picture" class="rounded-circle img-fluid" style="width: 210px; height: 250px;">
                 <h1 class="mb-1">Bianca Montiel - Portafolio</h1>
                 <h3 class= "text-faded mb-5"><em>Busco ser un puente en la innovacion con el desarrollo web y analisis de datos.</em></h3>
                 <a class="btn btn-dark btn-xl" href="#about">Conoce más sobre mi</a>
@@ -87,7 +87,7 @@
                 </h2>
                 <h3 class= "text-faded mb-3"><em>Conoce más sobre mi trayectoria</em></h3>
                 <h4 class= "text-faded mb-3"><em>¡Estoy lista para llevar tu proyecto al siguiente nivel!</em></h4>
-                <a class="btn btn-outline-dark btn-xl" href="assets/cv BiancaM.pdf">Descargar CV</a>
+                <a class="btn btn-outline-dark btn-xl" href="dist/assets/cvBiancaM.pdf">Descargar CV</a>
             </div>
         </section>
         <!-- Portfolio-->
@@ -106,7 +106,7 @@
                                     <p class="mb-0">Este proyecto simula una tienda de ropa donde puedes explorar diferentes productos, agregar artículos a tu carrito y realizar compras</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
+                            <img class="img-fluid" src="dist/assets/img/portfolio-1.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6 col-md-12 mb-4">
@@ -117,7 +117,7 @@
                                     <p class="mb-0">Esta aplicación permite a los usuarios explorar películas populares, buscar títulos específicos y guardar sus películas favoritas. </p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
+                            <img class="img-fluid" src="dist/assets/img/portfolio-2.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6 col-md-12 mb-4">
@@ -128,7 +128,7 @@
                                     <p class="mb-0">Color RGB es una aplicación web simple que permite a los usuarios ajustar los valores de color Rojo (R), Verde (G) y Azul (B) utilizando controles deslizantes. A medida que se cambian los valores, la aplicación actualiza dinámicamente el texto que muestra el valor actual de cada color.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
+                            <img class="img-fluid" src="dist/assets/img/portfolio-3.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6 col-md-12 mb-4">
@@ -139,7 +139,7 @@
                                     <p class="mb-0">Este es un programa en Python que permite a los usuarios ingresar puntuaciones en una escala del 1 al 5 junto con comentarios. Los datos se guardan en un archivo de texto y se pueden consultar en cualquier momento.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
+                            <img class="img-fluid" src="dist/assets/img/portfolio-4.jpg" alt="..." />
                         </a>
                     </div>
                 </div>
@@ -206,6 +206,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="dist/js/scripts.js"></script>
     </body>
 </html>
